# biblio

./: Makefile.am  configure.ac  rm_build_files.sh
common/: Makefile.am  article.c  assert.c  backend.c  common-string.c  configparse.c  dataframe.c  dict.c  except.c  frontend.c  mem.c  registry.c  session.c
include/: Makefile.am  argparse.h  article.h  assert.h  backend-psql.h  backend.h  commands.h  common-string.h  configparse.h  dataframe.h  dict.h  except.h  frontend-console.h  frontend-ncurses.h  frontend.h  mem.h  registry.h  session.h
lib/: Makefile.am  backend-psql.c  frontend-console.c  frontend-ncurses.c  frontend-server.c
src/: Makefile.am  argparse.h  article.c  article.h  backend-psql.c  backend-psql.h  backend.c  backend.h  biblio  biblio.c  commands.c  common-string.c  configparse.c  dataframe.c  dataframe.h  dict.c  except.c  frontend-console.c  frontend-console.h  frontend-ncurses.c  frontend.c  frontend.h  psql-backend.c  psql-backend.h  registry.c
test/: Makefile.am  test-article.c  test-dict.c  test-registry.c  test-string.c  test_dict.c
