noinst_LTLIBRARIES = libbibliocommon.la
libbibliocommon_la_SOURCES = article.c \
	assert.c \
	backend.c \
	common-string.c \
	configparse.c \
	dataframe.c \
	dict.c \
	except.c \
	frontend.c \
	mem.c \
	registry.c
libbibliocommon_la_CPPFLAGS = -I$(top_srcdir)/include
libbibliocommon_la_LDFLAGS = -ldl -lpq
